erDiagram
    INSTITUICOES_FAESA ||--o{ CURSOS : oferta
    CURSOS ||--o{ TURMAS : organiza

    TURMAS ||--o{ TURMA_DISCIPLINAS : oferece
    DISCIPLINAS ||--o{ TURMA_DISCIPLINAS : compoe

    USUARIOS ||--o{ MATRICULAS_ACADEMICAS : possui
    TURMAS ||--o{ MATRICULAS_ACADEMICAS : recebe

    MATRICULAS_ACADEMICAS ||--o{ DISCIPLINAS_CURSADAS : cursa
    TURMA_DISCIPLINAS ||--o{ DISCIPLINAS_CURSADAS : vincula
    DISCIPLINAS_CURSADAS ||--o{ AVALIACOES_DISCIPLINA : gera

    USUARIOS ||--o{ CHATBOT_CONVERSAS : inicia
    CHATBOT_CONVERSAS ||--o{ CHATBOT_MENSAGENS : contem

    USUARIOS ||--o{ CONSENTIMENTOS_LGPD : concede
    USUARIOS ||--o{ AUDITORIA_DADOS : registra
    RELATORIOS_ANONIMIZADOS ||--o{ AUDITORIA_DADOS : rastreia
